Do not restore browser windows for Crostini terminals

The Crostini VM does not start up automatically upon user login, and if
the user had Crostini terminal windows open they will be restored in a
broken state. This prevents restoring any windows that are from Crostini
terminals.

BUG=chromium:848920
TEST=Verified manually that terminal does not restore

Change-Id: Icec4986da80e039444cd92b151695d2d1751269e
Reviewed-on: https://chromium-review.googlesource.com/c/1287251
Commit-Queue: Jeffrey Kardatzke <jkardatzke@google.com>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Nicholas Verne <nverne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602787}